--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,15 +11,16 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.3
 Depends: 
-    graphics,
-    tidyverse
-Imports: 
+    Seurat,
     parallel,
-    SeuratObject
-Suggests: 
+    dplyr
+Imports: 
+    purrr,
+    clusterCrit,
     lisi,
     mrtree,
-    ROGUE,
+    ROGUE
+Suggests: 
     knitr,
     rmarkdown
 VignetteBuilder: knitr
