--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,4 +8,5 @@ import(lisi)
 import(mrtree)
 import(parallel)
 import(purrr)
+importFrom(SeuratObject,JoinLayers)
 importFrom(clusterCrit,intCriteria)
